--- a/src/EPTabletopApp.Blazor/wwwroot/index.html
+++ b/src/EPTabletopApp.Blazor/wwwroot/index.html
@@ -20,6 +20,11 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script>
+        var path = window.location.pathname.split('/');
+        var baseTag = document.getElementsByTagName('base');
+        baseTag[0].setAttribute('href', '/' + path[1] + '/');
+    </script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
